# ahmethingram

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml  test.yml
ahmethingra.egg-info/: PKG-INFO
workflows/: publish.yml
